...
//                colorFilter = ColorFilter.tint(MaterialTheme.colorScheme.primary),
//                modifier = Modifier
//                    .size(200.dp)
////                    .padding(bottom = 16.dp)
//            )
//
//            val tabs = listOf("LOGIN", "SIGNUP")
//
//            Box(
//                modifier = Modifier
//                    .clip(RoundedCornerShape(12.dp)) // rounded corners
//                    .border(
//                        1.dp,
...
        modifier = Modifier.fillMaxWidth()
    ) {
        // Email TextField
        OutlinedTextField(
            value = email,
            onValueChange = { email = it },
            label = { Text("abc@email.com") },
            singleLine = true,
            keyboardOptions = KeyboardOptions(keyboardType = KeyboardType.Email),
            leadingIcon = {
                Icon(
                    imageVector = Icons.Default.Email,
                    contentDescription = "Email Icon",
...
        )

        // Password
        OutlinedTextField(
            value = password,
            onValueChange = { password = it },
            label = { Text("Password") },
            singleLine = true,
            visualTransformation = if (passwordVisible) VisualTransformation.None else PasswordVisualTransformation(),
            leadingIcon = {
                Icon(
                    imageVector = Icons.Default.Lock,
                    contentDescription = "Password Icon"
...
                .fillMaxWidth(),
            colors = ButtonDefaults.buttonColors(
                containerColor = DarkBlue
            )
        ) {
            Text(
                "LOG IN",
                modifier = Modifier.padding(6.dp),
                style = MaterialTheme.typography.bodyMedium
            )
        }

        // Show loading indicator
...
//    ) {
//
//        // Profile Name
//        OutlinedTextField(
//            value = profileName,
//            onValueChange = { profileName = it },
//            label = { Text("Profile name") },
//            singleLine = true,
//            leadingIcon = {
//                Icon(
//                    imageVector = Icons.Default.Person,
//                    contentDescription = "Profile Icon"
//                )
...
//        )
//
//        // Email
//        OutlinedTextField(
//            value = email,
//            onValueChange = { email = it },
//            label = { Text("Email address") },
//            singleLine = true,
//            leadingIcon = {
//                Icon(
//                    imageVector = Icons.Default.Email,
//                    contentDescription = "Email Icon"
//                )
...
//        )
//
//        // Confirm Password
//        OutlinedTextField(
//            value = confirmPassword,
//            onValueChange = { confirmPassword = it },
//            label = { Text("Confirm password") },
//            singleLine = true,
//            visualTransformation = if (passwordVisible) VisualTransformation.None else PasswordVisualTransformation(),
//            leadingIcon = {
//                Icon(
//                    imageVector = Icons.Default.Lock,
//                    contentDescription = "Confirm Password Icon"
...
//                modifier = Modifier.padding(start = 16.dp, top = 4.dp)
//            )
//        }
//
//        if (authState is AuthState.RegisterSuccess) {
//            Text(
//                text = "Registered successfully",
//                style = MaterialTheme.typography.bodySmall,
//                modifier = Modifier.padding(start = 16.dp)
//            )
//        }
//
//        // Sign Up Button
//        Button(
//            onClick = {
//                when {
//                    profileName.isBlank() -> {
//                        passwordError = "Profile name cannot be empty"
//                    }
//
//                    email.isBlank() -> {
//                        passwordError = "Email cannot be empty"
//                    }
//
...
//            modifier = Modifier
//                .fillMaxWidth()
//                .padding(vertical = 16.dp),
//            colors = ButtonDefaults.buttonColors(containerColor = DarkBlue)
//        ) {
//            Text(
//                "SIGN UP",
//                modifier = Modifier.padding(10.dp),
//                style = MaterialTheme.typography.bodyMedium
//            )
//        }
//
//        // Show loading indicator
...
